# simulacion-vehiculo-Ackermann-ros2-Gazebo

./: LICENSE  README.md  Screencast from 09-08-2025 06:27:55 AM.webm  Screencast from 09-08-2025 06:42:32 AM.webm
src/obstacle_avoidance/: package.xml  setup.py
src/obstacle_avoidance/obstacle_avoidance/: avoid.py
src/vehiculo_description/: CMakeLists.txt  package.xml  setup.py
src/vehiculo_description/config/: ackermann_params.yaml  controllers_autoload.yaml  fws_params.yaml  ros2_control.yaml  tricycle_params.yaml
src/vehiculo_description/launch/: display.launch.py  gazebo.launch.py
src/vehiculo_description/meshes/: direccion_fl_link.STL  direccion_fr_link.STL
src/vehiculo_description/urdf/: vehiculo_autonomo-urdf.csv  vehiculo_autonomo-urdf.urdf
src/vehiculo_description/worlds/: empty_ros.world  mundo1
