<?xml version="1.0"?>
<package format="3">
  <name>vehiculo_description</name>
  <version>0.0.1</version>
  <description>URDF and meshes for autonomous vehicle model exported from SolidWorks</description>

  <maintainer email="angepine@espol.edu.ec">angelo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>four_wheel_steering_controller</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
